@@ -12,6 +12,7 @@ release_tests = 1
 travis_status = 1
 appveyor      = hbsdj04dds4oy6wo
 diag          = +Event
+diag          = +Mojolicious
 
 diag_preamble = | $post_diag = sub
 diag_preamble = | {
@@ -35,7 +36,12 @@ remove = AnyEvent::Handle
 remove = Carp
 remove = Test::More
 remove = warnings::register
+remove = constant
+remove = POSIX
+
+remove = Mojolicious
 remove = Mojo::Reactor
+remove = Mojo::IOLoop
 
 [Author::Plicease::Upload]
 cpan = 1
